care/force-app/main/default/objects/Senior_Care_Companies__c/Senior_Care_Companies__c.object-meta.xml
<CustomObject>
    <description>Combines Companies used by Senior Care</description>
    <label>Senior Care Company</label>
    <nameField>
        <label>Senior Care Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Senior Care Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>