care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Accreditations_Awards__c.field-meta.xml
<CustomField>
    <fullName>A1_Accreditations_Awards__c</fullName>
    <inlineHelpText>Attorney 1 Accreditations/Awards</inlineHelpText>
    <label>Att.1 Accreditations/Awards</label>
    <type>TextArea</type>
</CustomField>