care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Areas_of_specialization__c.field-meta.xml
<CustomField>
    <fullName>A1_Areas_of_specialization__c</fullName>
    <inlineHelpText>Attorney 1 Areas of specialization</inlineHelpText>
    <label>Att.1 Areas of specialization</label>
    <type>TextArea</type>
</CustomField>