care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_AVVO_Rating__c.field-meta.xml
<CustomField>
    <fullName>A1_AVVO_Rating__c</fullName>
    <label>Att.1 AVVO Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>