care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Comments__c.field-meta.xml
<CustomField>
    <fullName>A1_Comments__c</fullName>
    <inlineHelpText>Attorney 1 Comments</inlineHelpText>
    <label>Att.1 Comments</label>
    <type>TextArea</type>
</CustomField>