care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Date_Admitted_State_Bar__c.field-meta.xml
<CustomField>
    <fullName>A1_Date_Admitted_State_Bar__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Attorney 1 Date Admitted to State Bar</inlineHelpText>
    <label>Att.1 Date Admitted to State Bar</label>
    <type>Date</type>
</CustomField>