care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Email__c.field-meta.xml
<CustomField>
    <fullName>A1_Email__c</fullName>
    <label>Att.1 Email</label>
    <type>Email</type>
</CustomField>