care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_History_disciplinary_action__c.field-meta.xml
<CustomField>
    <fullName>A1_History_disciplinary_action__c</fullName>
    <inlineHelpText>Attorney 1 History of disciplinary action</inlineHelpText>
    <label>Att.1 History of disciplinary action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>