care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Initial_Consultation_Fee__c.field-meta.xml
<CustomField>
    <fullName>A1_Initial_Consultation_Fee__c</fullName>
    <label>Attorney1 Initial Consultation Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>