care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Life_Care_Planning_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>A1_Life_Care_Planning_Law_Firm__c</fullName>
    <inlineHelpText>Attorney 1 Life Care Planning Law Firm?</inlineHelpText>
    <label>Att.1 Life Care Planning Law Firm?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>