care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_NAELA_Member__c.field-meta.xml
<CustomField>
    <fullName>A1_NAELA_Member__c</fullName>
    <inlineHelpText>Is Attorney 1 NAELA Member?</inlineHelpText>
    <label>Att.1 NAELA Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>