care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Phone__c.field-meta.xml
<CustomField>
    <fullName>A1_Phone__c</fullName>
    <label>Att.1 Phone</label>
    <type>Phone</type>
</CustomField>