care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A1_Title__c.field-meta.xml
<CustomField>
    <fullName>A1_Title__c</fullName>
    <label>Att.1 Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>