care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Accreditations_Awards__c.field-meta.xml
<CustomField>
    <fullName>A2_Accreditations_Awards__c</fullName>
    <inlineHelpText>Attorney 2 Accreditations/Awards</inlineHelpText>
    <label>Att.2 Accreditations/Awards</label>
    <type>TextArea</type>
</CustomField>