care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Add_States_Licensed__c.field-meta.xml
<CustomField>
    <fullName>A2_Add_States_Licensed__c</fullName>
    <description>Changed to Multiselect 06/2018 SFORCE-1919</description>
    <inlineHelpText>Attorney 2 Additional States Licensed to Practice</inlineHelpText>
    <label>Att.2 Add. States Licensed to Practice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>HI</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>