care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Areas_of_specialization__c.field-meta.xml
<CustomField>
    <fullName>A2_Areas_of_specialization__c</fullName>
    <inlineHelpText>Attorney 2 Areas of specialization</inlineHelpText>
    <label>Att.2 Areas of specialization</label>
    <type>TextArea</type>
</CustomField>