care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_CELA_Member__c.field-meta.xml
<CustomField>
    <fullName>A2_CELA_Member__c</fullName>
    <inlineHelpText>Is Attorney 2 CELA Member?</inlineHelpText>
    <label>Att.2 CELA Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>