care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Comments__c.field-meta.xml
<CustomField>
    <fullName>A2_Comments__c</fullName>
    <inlineHelpText>Attorney 2 Comments</inlineHelpText>
    <label>Att.2 Comments</label>
    <type>TextArea</type>
</CustomField>