care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Dates_Selected_to_Super_Lawyers__c.field-meta.xml
<CustomField>
    <fullName>A2_Dates_Selected_to_Super_Lawyers__c</fullName>
    <label>Att.2 Dates Selected to Super Lawyers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>