care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Email__c.field-meta.xml
<CustomField>
    <fullName>A2_Email__c</fullName>
    <label>Att.2 Email</label>
    <type>Email</type>
</CustomField>