care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Phone__c.field-meta.xml
<CustomField>
    <fullName>A2_Phone__c</fullName>
    <label>Att.2 Phone</label>
    <type>Phone</type>
</CustomField>