care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Rate_applied_future_services__c.field-meta.xml
<CustomField>
    <fullName>A2_Rate_applied_future_services__c</fullName>
    <inlineHelpText>Attorney2: Is this rate applied towards future services?</inlineHelpText>
    <label>Att.2 Rate applied tds future services?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>