care/force-app/main/default/objects/Senior_Care_Companies__c/fields/A2_Waive_reduce_assesment_fee__c.field-meta.xml
<CustomField>
    <fullName>A2_Waive_reduce_assesment_fee__c</fullName>
    <label>Willing to waive/reduce assesment fee?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>