care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ABUC_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>ABUC_Agreement_Date__c</fullName>
    <inlineHelpText>Date of ABUC Agreement</inlineHelpText>
    <label>Date of Agreement</label>
    <type>Date</type>
</CustomField>