care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ABUC_Rate_for_Corp_Clients__c.field-meta.xml
<CustomField>
    <fullName>ABUC_Rate_for_Corp_Clients__c</fullName>
    <label>ABUC Rate for Corp Clients</label>
    <length>30</length>
    <type>Text</type>
</CustomField>