care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Accept_Medicaid_pending__c.field-meta.xml
<CustomField>
    <fullName>Accept_Medicaid_pending__c</fullName>
    <description>Sforce 1855 ---  Senior Care - Nursing Home SF Record Page Remove/Add Fields</description>
    <inlineHelpText>Can someone be admitted with a Medicaid pending status?</inlineHelpText>
    <label>Accept Medicaid pending?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Case by Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>