care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Accreditations_Awards__c.field-meta.xml
<CustomField>
    <fullName>Accreditations_Awards__c</fullName>
    <inlineHelpText>If your company has any accreditations, please describe them here.</inlineHelpText>
    <label>Accreditations/Awards</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>