care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ACH_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>ACH_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for SFORCE-1884 RT Non Medical Home Care 06/2018</description>
    <label>ACH Form Received</label>
    <type>Checkbox</type>
</CustomField>