care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ACH_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>ACH_Form_Sent__c</fullName>
    <description>added for SFORCE-1884 RT Non Medical Home Care 06/2018</description>
    <label>ACH Form Sent</label>
    <type>Date</type>
</CustomField>