care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>