care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Activities_offered__c.field-meta.xml
<CustomField>
    <fullName>Activities_offered__c</fullName>
    <description>Sforce 1854 --- Senior Care - Remove/Add fields in Assisted Living SF record pages</description>
    <inlineHelpText>What are some activities that the facility offers?</inlineHelpText>
    <label>Activities offered</label>
    <type>TextArea</type>
</CustomField>