care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <label>Additional Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>