care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Additional_fees__c.field-meta.xml
<CustomField>
    <fullName>Additional_fees__c</fullName>
    <label>Additional fees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>