care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Additional_rate_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_rate_information__c</fullName>
    <label>Additional rate information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>