care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Additionally_Insured__c.field-meta.xml
<CustomField>
    <fullName>Additionally_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Check, if an additional insurance is given.</description>
    <inlineHelpText>Check, if an additional insurance is given.</inlineHelpText>
    <label>Additionally Insured</label>
    <type>Checkbox</type>
</CustomField>