care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Administrator_curr_licensed__c.field-meta.xml
<CustomField>
    <fullName>Administrator_curr_licensed__c</fullName>
    <label>Administrator currently licensed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>