care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Admissions_Process__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Process__c</fullName>
    <label>Admissions Process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>