care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Affordable_Housing_Desc__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Housing_Desc__c</fullName>
    <label>If Yes, describe (Housing)</label>
    <type>TextArea</type>
</CustomField>