care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Affordable_Housing_Options__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Housing_Options__c</fullName>
    <label>Affordable Housing Options?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>