care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Age_in_place_assessment_recommendations__c.field-meta.xml
<CustomField>
    <fullName>Age_in_place_assessment_recommendations__c</fullName>
    <description>added for SFORCE-1921</description>
    <inlineHelpText>Will the provider complete a visit to offer home modification suggestions?</inlineHelpText>
    <label>Age in place assessment/recommendations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>