care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Agency_Current_availability__c.field-meta.xml
<CustomField>
    <fullName>Agency_Current_availability__c</fullName>
    <label>Current availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>