care/force-app/main/default/objects/Senior_Care_Companies__c/fields/AGENCY_ID__c.field-meta.xml
<CustomField>
    <fullName>AGENCY_ID__c</fullName>
    <description>SFORCE-2757
Senior Care Companies</description>
    <label>AGENCY ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>