care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Agree_to_implement_NSOR_check_in_future__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_implement_NSOR_check_in_future__c</fullName>
    <inlineHelpText>Agree to implement NSOR checks going forward?</inlineHelpText>
    <label>Agree to implement NSOR check in future?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - I agree to check the NSOR</fullName>
            </value>
            <value>
                <fullName>No - I do not agree to check the NSOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>