care/force-app/main/default/objects/Senior_Care_Companies__c/fields/AL_Shared_studio__c.field-meta.xml
<CustomField>
    <fullName>AL_Shared_studio__c</fullName>
    <description>Sforce 1854 --- Senior Care - Remove/Add fields in Assisted Living SF record pages</description>
    <label>AL Shared studio</label>
    <type>TextArea</type>
</CustomField>