care/force-app/main/default/objects/Senior_Care_Companies__c/fields/AL_studio__c.field-meta.xml
<CustomField>
    <fullName>AL_studio__c</fullName>
    <description>Sforce 1856 -- Senior Care - Create new record page for Life Plan Communities</description>
    <label>AL studio</label>
    <type>TextArea</type>
</CustomField>