care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ALC_Director_NCC_Administrator_s_Email__c.field-meta.xml
<CustomField>
    <fullName>ALC_Director_NCC_Administrator_s_Email__c</fullName>
    <description>Sforce 1856 -- Senior Care - Create new record page for Life Plan Communities</description>
    <label>ALC Director, NCC Administrator&apos;s Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>