care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ALC_Director_NCC_Administrator_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>ALC_Director_NCC_Administrator_s_Phone__c</fullName>
    <description>Sforce 1856 -- Senior Care - Create new record page for Life Plan Communities
Sforce 2008 - Labelchange</description>
    <label>NCC Administrator, contact info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>