care/force-app/main/default/objects/Senior_Care_Companies__c/fields/ALC_Services_provided__c.field-meta.xml
<CustomField>
    <fullName>ALC_Services_provided__c</fullName>
    <label>Services provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Bathing</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
            <value>
                <fullName>Assist with ambulation</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Transportation services</fullName>
            </value>
            <value>
                <fullName>Medication management</fullName>
            </value>
            <value>
                <fullName>Medicaton administration</fullName>
            </value>
            <value>
                <fullName>Access to health and medical services</fullName>
            </value>
            <value>
                <fullName>Grocery shopping</fullName>
            </value>
            <value>
                <fullName>Housekeeping</fullName>
            </value>
            <value>
                <fullName>Personal laundry services</fullName>
            </value>
            <value>
                <fullName>Hospice care</fullName>
            </value>
            <value>
                <fullName>Exercise and wellness programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>