care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Allow_companion_care_outside_agencies__c.field-meta.xml
<CustomField>
    <fullName>Allow_companion_care_outside_agencies__c</fullName>
    <label>Allow companion care f. outside agencies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>