care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Allow_supplement_care_frm_outside_agency__c.field-meta.xml
<CustomField>
    <fullName>Allow_supplement_care_frm_outside_agency__c</fullName>
    <description>Sforce 1856 -- Senior Care - Create new record page for Life Plan Communities</description>
    <inlineHelpText>Can residents bring in care from an outside agency?</inlineHelpText>
    <label>Allow supplement care frm outside agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>