care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Alternative_Phone2__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone2__c</fullName>
    <label>Alternative Phone 2</label>
    <type>Phone</type>
</CustomField>