care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Alzheimers_Assoc_dementia_training__c.field-meta.xml
<CustomField>
    <fullName>Alzheimers_Assoc_dementia_training__c</fullName>
    <inlineHelpText>Has the Alzheimer&apos;s Association provided dementia training for staff?</inlineHelpText>
    <label>xAlzheimer&apos;s Assoc. dementia training?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>