care/force-app/main/default/objects/Senior_Care_Companies__c/fields/Alzheimers_Assoc_last_training__c.field-meta.xml
<CustomField>
    <fullName>Alzheimers_Assoc_last_training__c</fullName>
    <label>xIf Yes, when was last training?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>